
 - `upsstats` tool updates:
   * Now has JSON output mode via `?json` (or `&json`) CGI query parameter.
     New `@TREELINK_JSON@` keyword added and HTML templates updated to expose
     these JSON documents when browsing. [issue #2524, PRs #3171, #3249]
   * Handle `device.model` in addition to `ups.model` in upsstats HTML
     templates. [#3180]

 - `upssched` tool updates:
   * Previously in PR #2896 (NUT releases v2.8.3 and v2.8.4) the `UPSNAME` and
     `NOTIFYTYPE` environment variables were neutered for the timer daemon,
     since their values at the moment it first started were irrelevant when
     actual timers fired. Lack of those values was however also against the
     documented expectations. Now the values set when the `upssched` client
     is called and ends up updating the timer daemon would be passed into
     the timer. Also a `START-TIMER-SHARED` operation was added, to track a
     single named timer for possibly many devices and/or event types -- in
     this case they would be comma-separated in the environment variable
     values. [issue #3092, PR #3097]
   * The `CANCEL-TIMER` action no longer stops at first hit for the timer name,
     but goes on (in case there are duplicates). A new `CANCEL-TIMER-MATCHED`
     was added, which also cares to match `UPSNAME` and `NOTIFYTYPE` values
     (if passed). [#3097]
   * Introduced support for `DEBUG_MIN` setting via `upssched.conf`. [#3097]
   * Introduced `upssched -l` mode to list currently tracked timers. [#3097]
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]
   * Introduced optional passing of `NOTIFYMSG` text (normally originating
     from `upsmon` which calls `upssched`) as an environment variable into
     the ultimately executed `CMDSCRIPT` processes. [#3105]

 - The `nut-driver-enumerator.sh` script (NDE) updates:
   * Revised info/error/warning/debug message emission so they go to `stderr`