@@ -1,3 +1,4 @@
+@NUT_UPSSTATS_TEMPLATE default@
 <!-- upsstats template file -->
 
 <!--
